--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         <a href="careers.html" class="hover:underline">Careers</a>
         <a href="board.html" class="hover:underline">Board Members</a>
         <a href="history.html" class="hover:underline">History</a>
+        <a href="blog.html" class="hover:underline text-blue-500 font-bold">Blog</a>
     </div>
 </header>
 
