--- a/admin/index.html
+++ b/admin/index.html
@@ -8,8 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
-            background: linear-gradient(135deg, #3b82f6, #ef4444);
             font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #3b82f6, #ef4444);
             color: white;
             display: flex;
             align-items: center;
@@ -18,34 +18,50 @@
             margin: 0;
         }
         .container {
-            text-align: center;
             background: rgba(255, 255, 255, 0.1);
             border-radius: 10px;
-            padding: 2rem;
+            padding: 3rem;
             box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+            text-align: center;
         }
         .title {
-            font-size: 2rem;
+            font-size: 2.5rem;
             font-weight: bold;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
         }
         .instructions {
-            font-size: 1rem;
+            font-size: 1.1rem;
             margin-bottom: 2rem;
         }
         .cms-container {
             width: 100%;
-            height: 500px; /* Default height for Netlify CMS */
+            height: 500px;
+        }
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            padding: 1rem;
+            background-color: rgba(0, 0, 0, 0.1);
+            color: white;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1 class="title">Welcome to the Content Manager</h1>
-        <p class="instructions">Use this interface to manage your blog posts and other content.</p>
+        <p class="instructions">Manage your blog posts and other content with ease. Please log in to start managing your content.</p>
+        
+        <!-- Netlify CMS will auto-render here -->
         <div class="cms-container">
             <!-- Netlify CMS will auto-render here -->
         </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+        <p>&copy; 2024 Your Company. All Rights Reserved.</p>
     </div>
 </body>
 </html>
