--- a/admin/index.html
+++ b/admin/index.html
@@ -63,5 +63,19 @@
     <div class="footer">
         <p>&copy; 2024 Your Company. All Rights Reserved.</p>
     </div>
+
+    <!-- Include Netlify Identity Widget -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script>
+        // Initialize Netlify Identity
+        if (window.netlifyIdentity) {
+            window.netlifyIdentity.on('init', function (user) {
+                if (!user) {
+                    // If the user is not logged in, open the login widget
+                    window.netlifyIdentity.open();
+                }
+            });
+        }
+    </script>
 </body>
 </html>
