--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Content Manager</title>
+    
+    <!-- Netlify CMS Script -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -14,7 +16,7 @@
         <p>Manage your blog posts and other content with ease.</p>
     </div>
 
-    <!-- Include Netlify Identity Widget -->
+    <!-- Include Netlify Identity Widget for login -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
         // Initialize Netlify Identity
@@ -26,6 +28,9 @@
                 }
             });
         }
+
+        // Initialize CMS (this step renders the Netlify CMS interface inside the 'cms' div)
+        CMS.init();
     </script>
 </body>
 </html>
