--- a/admin/index.html
+++ b/admin/index.html
@@ -7,7 +7,45 @@
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Your custom styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #3b82f6, #ef4444);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            padding: 3rem;
+            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+            text-align: center;
+        }
+        .title {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 1.5rem;
+        }
+        .instructions {
+            font-size: 1.1rem;
+            margin-bottom: 2rem;
+        }
+        .cms-container {
+            width: 100%;
+            height: 500px;
+        }
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            padding: 1rem;
+            background-color: rgba(0, 0, 0, 0.1);
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -15,8 +53,8 @@
         <h1 class="title">Welcome to the Content Manager</h1>
         <p class="instructions">Manage your blog posts and other content with ease. Please log in to start managing your content.</p>
         
-        <!-- Ensure the div for CMS is present -->
-        <div id="cms" class="cms-container">
+        <!-- Netlify CMS will auto-render here -->
+        <div class="cms-container">
             <!-- Netlify CMS will auto-render here -->
         </div>
     </div>
