--- a/blog.html
+++ b/blog.html
@@ -4,40 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
-    <nav class="bg-blue-700 text-white p-4">
-        <div class="container mx-auto flex justify-between">
-            <h1 class="text-xl font-bold">Blog Feed</h1>
-            <a href="admin/index.html" class="text-lg underline">Admin Login</a>
-        </div>
-    </nav>
-    <main class="container mx-auto py-10">
-        <div id="blog-posts" class="space-y-8">
-            <!-- Blog posts will be injected here -->
-        </div>
-    </main>
-    <footer class="bg-blue-700 text-white py-4 text-center">
-        <p>&copy; 2024 Your Company</p>
-    </footer>
-    <script>
-        // Fetch blog posts dynamically
-        fetch('/blog')
-            .then(response => response.json())
-            .then(posts => {
-                const postsContainer = document.getElementById('blog-posts');
-                posts.forEach(post => {
-                    const postElement = document.createElement('div');
-                    postElement.classList.add('bg-white', 'shadow', 'rounded', 'p-6');
-                    postElement.innerHTML = `
-                        <h2 class="text-2xl font-bold mb-2">${post.title}</h2>
-                        <p class="text-sm text-gray-500 mb-4">${new Date(post.date).toLocaleDateString()}</p>
-                        <p>${post.body}</p>
-                    `;
-                    postsContainer.appendChild(postElement);
-                });
-            });
-    </script>
+<body>
+    <h1>Our Blog</h1>
+    <p>Stay updated with our latest posts:</p>
+    
+    <!-- Substack Embed -->
+    <iframe src="https://amusva.substack.com/embed" 
+            width="100%" 
+            height="600" 
+            style="border:none; background:white;" 
+            frameborder="0" 
+            scrolling="no">
+    </iframe>
 </body>
 </html>
