--- a/blog.html
+++ b/blog.html
@@ -9,13 +9,25 @@
     <h1>Our Blog</h1>
     <p>Stay updated with our latest posts:</p>
     
-    <!-- Substack Embed -->
-    <iframe src="https://amusva.substack.com/embed" 
-            width="100%" 
-            height="600" 
-            style="border:none; background:white;" 
-            frameborder="0" 
-            scrolling="no">
-    </iframe>
+    <!-- Custom Blog Post List from Substack RSS Feed -->
+    <ul id="blog-posts"></ul>
+
+    <script>
+        fetch('https://amusva.substack.com/feed')
+            .then(response => response.text())
+            .then(str => new window.DOMParser().parseFromString(str, "text/xml"))
+            .then(data => {
+                const items = data.querySelectorAll('item');
+                const postsList = document.getElementById('blog-posts');
+                
+                items.forEach(el => {
+                    const title = el.querySelector('title').textContent;
+                    const link = el.querySelector('link').textContent;
+                    const listItem = document.createElement('li');
+                    listItem.innerHTML = `<a href="${link}" target="_blank">${title}</a>`;
+                    postsList.appendChild(listItem);
+                });
+            });
+    </script>
 </body>
 </html>
