--- a/blog.html
+++ b/blog.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Our Blog</title>
 </head>
 <body>
-    <h1>Our Blog</h1>
+    <h1>William's Substack Posts</h1>
     <p>Stay updated with our latest posts:</p>
     
-    <!-- List of Blog Posts -->
     <ul id="blog-posts"></ul>
 
     <script>
