--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,8 @@
     <h1>Our Blog</h1>
     <p>Stay updated with our latest posts:</p>
     
-    <!-- Substack Embed -->
-    <iframe src="https://amusva.substack.com/embed" 
+    <!-- Substack Embed with skip parameter -->
+    <iframe src="https://amusva.substack.com/embed?skip=true" 
             width="100%" 
             height="600" 
             style="border:none; background:white;" 
