--- a/blog.html
+++ b/blog.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Our Blog</title>
 </head>
 <body>
     <h1>Our Blog</h1>
     <p>Stay updated with our latest posts:</p>
     
-    <!-- Substack Embed with skip parameter -->
-    <iframe src="https://amusva.substack.com/embed?skip=true" 
+    <!-- No Thanks Button: Allows users to skip subscription -->
+    <button onclick="window.location.href='https://amusva.substack.com'">No Thanks, Show Blog</button>
+    
+    <p>Or view posts directly:</p>
+
+    <!-- Substack Embed -->
+    <iframe src="https://amusva.substack.com/embed" 
             width="100%" 
             height="600" 
             style="border:none; background:white;" 
             frameborder="0" 
             scrolling="no">
     </iframe>
+
 </body>
 </html>
