--- a/blog.html
+++ b/blog.html
@@ -4,24 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Blog</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <h1>Our Blog</h1>
-    <p>Stay updated with our latest posts:</p>
-    
-    <!-- No Thanks Button: Allows users to skip subscription -->
-    <button onclick="window.location.href='https://amusva.substack.com'">No Thanks, Show Blog</button>
-    
-    <p>Or view posts directly:</p>
+<body class="bg-gray-50 font-sans antialiased">
+    <div class="container mx-auto p-6">
+        <header class="text-center mb-8">
+            <h1 class="text-4xl font-bold text-gray-800">Our Blog</h1>
+            <p class="mt-2 text-lg text-gray-600">Stay updated with our latest posts:</p>
+        </header>
 
-    <!-- Substack Embed -->
-    <iframe src="https://amusva.substack.com/embed" 
-            width="100%" 
-            height="600" 
-            style="border:none; background:white;" 
-            frameborder="0" 
-            scrolling="no">
-    </iframe>
+        <div class="text-center mb-8">
+            <button 
+                onclick="window.location.href='https://amusva.substack.com'" 
+                class="px-6 py-3 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition duration-300">
+                No Thanks, Show Blog
+            </button>
+        </div>
 
+        <div class="text-center mb-8">
+            <p class="text-lg text-gray-600">Or view posts directly:</p>
+        </div>
+
+        <!-- Substack Embed -->
+        <div class="flex justify-center">
+            <iframe src="https://amusva.substack.com/embed" 
+                    width="100%" 
+                    height="600" 
+                    class="rounded-lg shadow-lg border-none" 
+                    style="max-width: 1000px;">
+            </iframe>
+        </div>
+    </div>
 </body>
 </html>
