--- a/blog.html
+++ b/blog.html
@@ -13,26 +13,12 @@
             <p class="mt-2 text-lg text-gray-600">Stay updated with our latest posts:</p>
         </header>
 
+        <!-- Direct link to Substack Blog -->
         <div class="text-center mb-8">
-            <button 
-                onclick="window.location.href='https://amusva.substack.com'" 
-                class="px-6 py-3 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition duration-300">
-                No Thanks, Show Blog
-            </button>
-        </div>
-
-        <div class="text-center mb-8">
-            <p class="text-lg text-gray-600">Or view posts directly:</p>
-        </div>
-
-        <!-- Substack Embed -->
-        <div class="flex justify-center">
-            <iframe src="https://amusva.substack.com/embed" 
-                    width="100%" 
-                    height="600" 
-                    class="rounded-lg shadow-lg border-none" 
-                    style="max-width: 1000px;">
-            </iframe>
+            <a href="https://amusva.substack.com" 
+               class="px-6 py-3 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition duration-300" target="_blank">
+               Go Directly to Blog
+            </a>
         </div>
     </div>
 </body>
