--- a/index.html
+++ b/index.html
@@ -161,19 +161,11 @@
         <a href="careers.html" class="hover:underline">Careers</a>
         <a href="board.html" class="hover:underline">Board Members</a>
         <a href="history.html" class="hover:underline">History</a>
-        <a href="blog.html" class="hover:underline text-blue-500 font-bold">Blog</a>
+
+        <!-- New link to Substack -->
+        <a href="https://amusva.substack.com" class="hover:underline text-blue-500 font-bold" target="_blank">Our Blog</a>
     </div>
 </header>
-
-<footer class="bg-blue-700 text-white py-4 text-center">
-    <p>&copy; 2024 Your Company. All Rights Reserved.</p>
-    <!-- Add this Admin Link -->
-    <div class="mt-4">
-        <a href="admin/index.html" class="text-lg font-bold text-yellow-300 hover:text-yellow-400">
-            Admin Login
-        </a>
-    </div>
-</footer>
 
 <!-- Leadership Box -->
 <div class="fixed bottom-0 left-0 p-4 bg-gray-100 rounded-lg shadow-md z-50" id="leadershipBox">
