--- a/blog.html
+++ b/blog.html
@@ -3,23 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Blog</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Blog</title>
 </head>
-<body class="bg-gray-50 font-sans antialiased">
-    <div class="container mx-auto p-6">
-        <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-800">Our Blog</h1>
-            <p class="mt-2 text-lg text-gray-600">Stay updated with our latest posts:</p>
-        </header>
-
-        <!-- Direct link to Substack Blog -->
-        <div class="text-center mb-8">
-            <a href="https://amusva.substack.com" 
-               class="px-6 py-3 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition duration-300" target="_blank">
-               Go Directly to Blog
-            </a>
-        </div>
-    </div>
+<body>
+    <h1>Our Blog</h1>
+    <p>Stay updated with our latest posts:</p>
+    
+    <!-- Substack Embed -->
+    <iframe src="https://amusva.substack.com/embed" 
+            width="100%" 
+            height="600" 
+            style="border:none; background:white;" 
+            frameborder="0" 
+            scrolling="no">
+    </iframe>
 </body>
 </html>
