--- a/honors.html
+++ b/honors.html
@@ -322,23 +322,37 @@ section p {
     color: #94a3b8;
     margin-top: 10px;
 }
-</style>
+
+<head>
+    <style>
+        /* Tailwind CSS styles can be applied via CDN or your custom setup */
+    </style>
+<head>
+    <style>
+        /* Tailwind CSS styles can be applied via CDN or your custom setup */
+    </style>
 </head>
 <body class="bg-gray-900">
-<nav class="bg-gray-800 p-4">
-    <div class="max-w-7xl mx-auto flex justify-between items-center">
-        <a href="index.html">Homepage</a>
-        <a href="honors.html">Honors Section</a>
-        <a href="honors.html">2023 Veterans Day Honor Wall Campaign</a>
-        <a href="news.html">News</a>
-        <a href="events.html">Upcoming Chapter Events</a>
-        <a href="contactus.html">Contact Us</a>
-        <a href="committees.html">Committees</a>
-        <a href="careers.html">Careers</a>
-        <a href="board.html">Board Members</a>
-        <a href="history.html">History</a>
-    </div>
-</nav>
+    <!-- Navbar -->
+    <nav class="bg-gray-800 p-2">
+        <div class="max-w-7xl mx-auto flex justify-between items-center">
+            <!-- Logo or brand name on the left -->
+            <a href="index.html" class="text-white text-lg font-semibold hover:text-blue-400">Homepage</a>
+
+            <!-- Navigation links with smaller font size and spacing -->
+            <div class="flex space-x-4">
+                <a href="honors.html" class="text-white text-sm hover:text-blue-400 transition duration-200">Honors Section</a>
+                <a href="honors.html" class="text-white text-sm hover:text-blue-400 transition duration-200">2023 Veterans Day Honor Wall Campaign</a>
+                <a href="news.html" class="text-white text-sm hover:text-blue-400 transition duration-200">News</a>
+                <a href="events.html" class="text-white text-sm hover:text-blue-400 transition duration-200">Upcoming Chapter Events</a>
+                <a href="contactus.html" class="text-white text-sm hover:text-blue-400 transition duration-200">Contact Us</a>
+                <a href="committees.html" class="text-white text-sm hover:text-blue-400 transition duration-200">Committees</a>
+                <a href="careers.html" class="text-white text-sm hover:text-blue-400 transition duration-200">Careers</a>
+                <a href="board.html" class="text-white text-sm hover:text-blue-400 transition duration-200">Board Members</a>
+                <a href="history.html" class="text-white text-sm hover:text-blue-400 transition duration-200">History</a>
+            </div>
+        </div>
+    </nav>
 
     <!-- Honor Wall Section -->
 <section class="px-6 py-16 max-w-7xl mx-auto">
