--- a/careers.html
+++ b/careers.html
@@ -151,17 +151,26 @@
 </head>
 <body>
 
-    <!-- Navigation Links (Top) -->
-    <header>
-        <div class="container mx-auto flex justify-center space-x-4 text-sm">
-            <a href="#honor-wall" class="hover:underline">2023 Veterans Day Honor Wall Campaign</a>
-            <a href="#home" class="hover:underline">AMU / APU SVA Home</a>
-            <a href="#news" class="hover:underline">AMU SVA News</a>
-            <a href="#board-members" class="hover:underline">Board Members</a>
-            <a href="#committees" class="hover:underline">Committees</a>
-            <a href="#events" class="hover:underline">Upcoming Chapter Events</a>
-        </div>
-    </header>
+
+
+
+<!-- Navigation Links (Top) -->
+<header>
+    <div class="container mx-auto flex justify-center space-x-6 py-2">
+        <!-- Navigation Links with navy blue text and hover effects -->
+        <a href="honors.html" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">2023 Veterans Day Honor Wall Campaign</a>
+        <a href="index.html" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">AMU / APU SVA Home</a>
+        <a href="news.html" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">AMU SVA News</a>
+        <a href="board.html" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">Board Members</a>
+        <a href="committees.html" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">Committees</a>
+        <a href="events.html" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">Upcoming Chapter Events</a>
+    </div>
+</header>
+
+
+
+
+
 
     <!-- Career and Social Development Content -->
     <section class="bg-blue-700 bg-opacity-70 text-white">
