--- a/board.html
+++ b/board.html
@@ -19,7 +19,7 @@
             position: fixed;
             bottom: 0;
             right: 0;
-            opacity: 0.2;
+            opacity: 0.6;
             pointer-events: none;
             z-index: 10;
         }
@@ -96,21 +96,22 @@
 
 <body>
 
-    <!-- Top Navigation Links -->
-    <header>
-        <div class="container mx-auto">
-            <div class="nav-links">
-                <a href="honors.html">2023 Veterans Day Honor Wall Campaign</a>
-                <a href="index.html#history">SVA History</a>
-                <a href="index.html#home">AMU / APU SVA Home</a>
-                <a href="index.html#news">AMU SVA News</a>
-                <a href="index.html#board-members">Board Members</a>
-                <a href="index.html#committees">Committees</a>
-                <a href="index.html#events">Upcoming Chapter Events</a>
-            </div>
-            <h1>Board Members</h1>
+<!-- Top Navigation Links -->
+<header>
+    <div class="container mx-auto">
+        <div class="nav-links flex justify-center space-x-6 py-2">
+            <!-- Navigation Links -->
+            <a href="honors.html" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">2023 Veterans Day Honor Wall Campaign</a>
+            <a href="index.html#history" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">SVA History</a>
+            <a href="index.html#home" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">AMU / APU SVA Home</a>
+            <a href="index.html#news" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">AMU SVA News</a>
+            <a href="index.html#board-members" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">Board Members</a>
+            <a href="index.html#committees" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">Committees</a>
+            <a href="index.html#events" class="text-blue-800 text-sm hover:text-blue-500 hover:underline">Upcoming Chapter Events</a>
         </div>
-    </header>
+        <h1 class="text-center text-xl font-bold mt-4 text-white">Board Members</h1>
+    </div>
+</header>
 
 <!-- Board Members Section -->
 <main class="container mx-auto py-12 px-6">
@@ -173,10 +174,10 @@
     </div>
 </main>
 
-    <!-- Floating Logo -->
-    <div class="floating-logo">
-        <img src="blacksva.png" alt="SVA Logo" style="opacity: 1.4;">
-    </div>
+<!-- Floating Logo -->
+<div class="floating-logo">
+    <img src="blacksva.png" alt="SVA Logo" style="opacity: 1;">
+</div>
 
 </body>
 </html>
